completed the css styling for the landing page

--- a/landing-page/landing-page.html
+++ b/landing-page/landing-page.html
@@ -3,12 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href ="styling.css">
+    <title>A Tiny Little Page about Shirley</title>
 </head>
 <body>
     <div class="header">
-        
+        <div class="bigtext">This is a Tiny Little Page About Me</div>
+        <div class="right-links">
+            <div class="link">more about me</div>
+            <div class="link">even more about me</div>
+            <div class="link">I know you're sick of me</div>
+        </div>
+    </div>
+    <div class="blockone">
+        <div class="text">
+            <div class="bigtext">My name is Shirley</div>
+            <div class="smalltext">I'm currently 20, almost 21, at a complete lost of what I want to do in life, 
+            but I somewhat like designing, writing, skating, playing volleyball, making videos, drawing, and I chose a degree that
+            taught me to code and I desperately want to be employed in this field so here I am. </div>
+            <button class="help-button">Employ Her Now</button>
+        </div>
+        <img src="./images/silly_shirley.jpg" alt="shirley in her natural habitat" class="bigpicture">
+    </div>
+    <div class="blocktwo">
+        <div class="bigtext">A Snippet of My Full Storage iCloud Photos.</div>
+        <div class="useful-stuff">
+            <div class="container">
+                <img src="./images/nanjing.jpg" alt="Nanjing, China">
+                <div class="caption">The City I was Born in</div>
+            </div>
+            <div class="container">
+                <img src="./images/vancouver.jpg" alt="Vancouver, BC">
+                <div class="caption">The City I Grew Up in</div>
+            </div>
+            <div class="container">
+                <img src="./images/toronto.jpg" alt="Toronto, ON">
+                <div class="caption">The City I am now at</div>
+            </div>
+            <div class="container">
+                <img src="./images/mrmah.jpg" alt="Steveston London Secondary School room 103">
+                <div class="caption">My favourite classroom in my High School</div>
+            </div>
+            <div class="container">
+                <img src="./images/mygirls.jpg" alt="JEASIS">
+                <div class="caption">These are my girls, they're all super talented</div>
+            </div>
+            <div class="container">
+                <img src="./images/blurry.jpg" alt="me">
+                <div class="caption">Blurry 'cause I only look good in blurry photos</div>
+            </div>
+            <div class="container">
+                <img src="./images/luffy.jpg" alt="luffy look alike">
+                <div class="caption">I'm a pretty silly person once you get to know me</div>
+            </div>
+            <div class="container">
+                <img src="./images/keshi.jpg" alt="keshi concert during 'drunk' ">
+                <div class="caption">I LOVE KESHI</div>
+            </div>
+        </div>
+    </div>
+    <div class="blockthree">
+        <div class="words">
+            <div class="description">inspiring quotes are so overrated, here's something I came up after my worst breakup ever:</div>
+            <div class="quote">"4 am is the border between morning and night, and 4 am is the border between falling in love and letting go."</div>
+        </div>
+        <div class="quoter">- Shirley, Sad, Long Long Ago...</div>
+    </div>
+    <div class="blockfour">
+        <div class="text">
+            <div class="bigtext">So... am I employed yet?</div>
+            <div class="description">what are you waiting for   ------------------------------------------------------> </div>
+        </div>
+        <button class="help-button">Employ Her Now</button>
+    </div>
+    <div class="footer">
+        Copyright ©️ 2023  The Shirley Project
     </div>
     
 </body>
